--- a/styles.css
+++ b/styles.css
@@ -70,9 +70,49 @@ h1 {
     font-weight: bold;
 }
 
+.main h1 {
+    margin: 0 auto;
+    text-align: center;
+    line-height: 1.3;
+}
+
+
+.diagonal-text {
+    display: inline-flex;
+    align-items: center;
+    font-size: 2.5rem;
+    font-weight: bold;
+    position: relative;
+    text-align: center;
+}
+
+.diagonal-text .slash {
+    font-size: 7rem;
+    /* font-weight: bold; */
+    margin: 0 10px;
+}
+
+.diagonal-text .top-left {
+    position: relative;
+    top: -20px;  /* Moves text slightly upward */
+    left: -2px; /* Moves text slightly left */
+}
+
+.diagonal-text .bottom-right {
+    position: relative;
+    top: 20px;  /* Moves text slightly downward */
+    right: -2px; /* Moves text slightly right */
+}
+
 p {
     font-size: 1.2rem;
     color: #666;
+}
+
+.main p {
+    max-width: 750px;
+    margin: 20px auto 0 auto; /* Added spacing between h1 and p */
+    text-align: center;
 }
 
 .profile-pic {
@@ -95,7 +135,7 @@ p {
 .about {
     background-color: #3f6ab0;
     color: white;
-    padding-top: 100px;
+    padding-top: 50px;
     padding-bottom: 170px;
     position: relative;
     z-index: 1;
@@ -104,16 +144,26 @@ p {
 
 .about h2 {
     font-size: 2rem;
+    margin-top: 30px; /* More space above h2 */
+    margin-bottom: 15px; /* Less space below h2 */
 }
 
-.about p {
+.about p,
+.about ul {
     font-size: 1.1rem;
-    color: #ffffff;
-    margin-top: 20px;
     max-width: 800px;
+    color: #ffffff;
+    /* margin-top: 20px; */
     margin-left: auto;
     margin-right: auto;
+    line-height: 1.5;
 }
+
+.about ul {
+    list-style-type: disc;
+    padding-left: 20px;
+}
+
 
 /* Cards Section */
 .cards {
@@ -168,7 +218,6 @@ p {
         box-sizing: border-box; /* Ensure padding is included in width calculation */
     }
 
-    /* Vertical layout styling */
     .card:first-child {
         border-radius: 20px 20px 0 0; /* Round top corners for first card */
         margin-top: 0; /* No negative margin for first card */
@@ -194,20 +243,15 @@ p {
 }
 
 .card p {
+    font-size: 1.05rem;
     margin-top: 10px;
     margin-bottom: 20px;
 }
 
-.card > ul {
-    list-style: none;
-    text-align: center;
-    padding: 0;
-}
 
 .card > ul > li {
-    margin-bottom: 5px;
-    font-size: 1.1rem;
-    color: #555;
+    font-size: 1rem;
+    color: #666;
 }
 
 .card > ul > li > span {
@@ -218,28 +262,21 @@ p {
     margin-top: 20px;
 }
 
-/* Nested list for tools */
-.second-list {
-    list-style: disc;
-    padding-left: 20px;
+.card-list {
+    list-style-type: disc ;
+    padding-left: 30px; /* Reduced left padding */
+    padding-right: 30px; /* Added right padding to balance */
     text-align: left;
-    margin-bottom: 40px;
-}
-
-.second-list li {
     margin-bottom: 5px;
-    padding-left: 5px;
+    max-width: 90%; /* Ensures list doesn’t touch card edges */
 }
 
-/* .second-list:has(li:nth-child(6)) {
-    column-count: 2;
-    column-gap: 20px;
-    text-align: center;
+.card-list li {
+    text-align: left;
+    margin-bottom: 5px;
+    padding-left: 5px; /* Slight left indent for better readability */
 }
 
-.second-list:has(li:nth-child(6)) li {
-    break-inside: avoid;
-} */
 
 /* Get in Touch Section */
 .get-in-touch {
@@ -281,7 +318,7 @@ p {
 /* Footer Section */
 .footer {
     text-align: center;
-    padding: 80px 20px;
+    padding: 50px 10px;
     background-color: #3f6ab0;
     color: white;
 }
@@ -292,8 +329,8 @@ p {
 }
 
 .footer p {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
+    font-size: 1rem;
+    margin-bottom: 5px;
     color: rgba(255, 255, 255, 0.7);
 }
 
@@ -353,7 +390,6 @@ p {
     opacity: 1;
 }
 
-
 .icon-tooltip, .footer-text {
     position: relative;
     display: inline-block;
@@ -364,484 +400,9 @@ p {
     opacity: 1;
 }
 
-/* Research Section */
-.about-research {
-    background-color: #3f6ab0;
-    color: white;
-    padding: 70px 0; /* Keep vertical padding */
-    width: 100%;
-}
-
-.about-research-container {
-    padding-left: 10%;
-    padding-right: 10%;
-    max-width: none; /* Remove max-width to allow continuous growth */
-    margin: 0 auto;
-    text-align: justify;
-}
-
-.about-research h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-    text-align: left;
-}
-
-.about-research p {
-    font-size: 1.1rem;
-    color: white;
-    margin-top: 20px;
-    text-align: justify;
-}
-
-.research-list {
-    margin-top: 20px;
-    font-size: 1.1rem;
-    text-align: left;
-    padding-left: 50px;
-}
-
-.research-list li {
-    font-size: 1.1rem;
-}
-
-.research-section {
-    padding: 60px 0;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center the courses */
-}
-
-.research-section h2 {
-    font-size: 2.5rem;
-    text-align: center;
-    margin-bottom: 50px;
-    color: #3f6ab0;
-}
-
-/* Research Items */
-.research-item {
-    display: flex;
-    gap: 40px;
-    margin-bottom: 50px;
-    background-color: #fff;
-    padding: 20px;
-    border: 1px solid #bebebe;
-    border-radius: 20px;
-    width: 80%;
-    max-width: none;
-    align-items: flex-start;
-}
-
-.research-details {
-    flex: 1; /* Allows the element to grow and fill available space */
-    width: auto; /* Overrides any fixed width */
-}
-
-.image-container {
-    flex: 0 0 300px; /* Fixed width to prevent resizing */
-}
-
-.image-container img.paper-img {
-    width: 300px; /* Fixed width */
-    height: auto; /* Maintain aspect ratio */
-    border-radius: 10px;
-    object-fit: cover;
-}
-
-.research-details h3 {
-    font-size: 1.8rem;
-    color: #3f6ab0;
-    margin-bottom: 10px;
-}
-
-.research-details p {
-    font-size: 1.1rem;
-    margin-bottom: 20px;
-    color: #666;
-    text-align: justify;
-}
-
-.research-details p strong {
-    font-weight: bold;
-    color: #3f6ab0;
-}
-
-.research-details a.coauthor-hlink {
-    color: #3f6ab0;
-    text-decoration: none;
-}
-
-.research-details a.coauthor-hlink:hover {
-    text-decoration: underline;
-}
-
-@media (max-width: 1200px) {
-    .research-item {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
-    .research-item img.paper-img {
-        width: 100%;
-        max-width: 300px; 
-        margin-bottom: 20px;
-    }
-
-    .research-details {
-        width: 100%;
-    }
-
-    .research-details-blog {
-        width: 100%;
-    }
-}
-
-/* Buttons */
-.research-details .button {
-    display: inline-block;
-    padding: 10px 30px;
-    border: 2px solid #3f6ab0;
-    border-radius: 30px;
-    color: #3f6ab0;
-    text-decoration: none;
-    font-size: 1rem;
-    font-weight: bold;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    margin-right: 10px; /* Add some space between buttons horizontally */
-    margin-bottom: 5px; /* Add a small space below buttons for when they wrap */
-}
-
-.research-details .button:hover {
-    background-color: #3f6ab0;
-    color: #fff;
-}
-
-
-@media (max-width: 1200px) {
-    .research-details .button {
-        display: block;
-        width: 200px; /* Or whatever width you prefer */
-        margin: 0 auto 15px auto; /* Center the button and add more space below */
-    }
-
-    .research-details .button:last-child {
-        margin-bottom: 0; /* Remove bottom margin from the last button */
-    }
-}
-
-/* Course Section */
-.course-section {
-    padding: 60px 0;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center the courses */
-}
-
-.course {
-    background: white;
-    padding: 20px;
-    margin-bottom: 50px;
-    border: 1px solid #bebebe;
-    border-radius: 20px;
-    width: 80%;
-    max-width: none;
-}
-
-.course-content {
-    flex: 1; 
-    width: auto; 
-}
-
-.course h3 {
-    max-width: 100%;
-    font-size: 2rem;
-    color: #3f6ab0;
-    margin-bottom: 20px;
-}
-
-.course p {
-    max-width: 100%;
-    text-align: justify;
-    font-size: 1.1rem;
-    margin-bottom: 20px;
-    color: #666;
-}
-
-.course .button {
-    width: auto;
-    display: inline-block;
-}
-
-.course p strong {
-    font-weight: bold;
-    color: #3f6ab0;
-}
-
-.course a.coauthor-hlink {
-    color: #3f6ab0;
-    text-decoration: none;
-}
-
-.course a.coauthor-hlink:hover {
-    text-decoration: underline;
-}
-
-.course .button {
-    display: inline-block;
-    padding: 10px 30px;
-    border: 2px solid #3f6ab0;
-    border-radius: 30px;
-    color: #3f6ab0;
-    text-decoration: none;
-    font-size: 1rem;
-    font-weight: bold;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.course .button:hover {
-    background-color: #285080;
-    color: #fff;
-}
-
-.slides-gallery {
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 20px;
-    margin-top: 30px;
-}
-
-.slides-gallery a {
-    display: block;
-}
-
-.slides-gallery img.slide-thumb {
-    width: 100%;
-    height: auto;
-    border-radius: 5px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-}
-
-.slides-gallery img.slide-thumb:hover {
-    transform: scale(1.05); /* Slight zoom effect */
-}
-
-@media (max-width: 768px) {
-    .course {
-        padding: 15px;
-        text-align: center;
-    }
-
-    .course h3 {
-        font-size: 1.8rem;
-    }
-
-    .course p {
-        font-size: 1rem;
-    }
-
-    .slides-gallery {
-        grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    }
-}
-
-/* Blog Post Styling */
-.blog-section {
-    padding: 60px 0;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center the blog posts */
-}
-
-.blog-post {
-    background-color: white;
-    border: 1px solid #bebebe;
-    border-radius: 20px;
-    width: 80%;
-    max-width: none;
-    margin: 0 auto 50px auto;
-    box-sizing: border-box;
-}
-
-/* Padding for different screen sizes */
-@media (min-width: 1201px) {
-    .blog-post {
-        padding: 50px 80px; /* Increased padding for wider screens */
-    }
-}
-
-@media (max-width: 1200px) and (min-width: 769px) {
-    .blog-post {
-        width: 90%;
-        padding: 40px 60px; /* Slightly less padding for medium screens */
-    }
-}
-
-@media (max-width: 768px) {
-    .blog-post {
-        width: 95%;
-        padding: 30px 40px; /* Less padding for mobile screens */
-    }
-}
-
-.blog-post h1 {
-    font-size: 2.5rem;
-    color: #3f6ab0;
-    margin-bottom: 20px;
-    text-align: left;
-}
-
-.blog-post p {
-    font-size: 1.2rem;
-    color: #666;
-    line-height: 1.7;
-    margin-bottom: 20px;
-    text-align: left;
-    text-align: justify;
-}
-
-.blog-post h2 {
-    font-size: 1.8rem;
-    color: #3f6ab0;
-    margin-top: 30px;
-    margin-bottom: 15px;
-    text-align: left;
-}
-
-.blog-post h3 {
-    font-size: 1.2rem;
-    color: #3f6ab0;
-    margin-top: 30px;
-    margin-bottom: 15px;
-    text-align: left;
-}
-
-.blog-post a {
-    color: #3f6ab0;
-    text-decoration: none;
-}
-
-.blog-post a:hover {
-    text-decoration: underline;
-}
-
-.blog-post ul {
-    padding: 0 40px 5px;
-    font-size: 1.1rem;
-    color: #666;
-    text-align: left;
-}
-
-/* Research Blog */
-.research-details-blog {
-    flex-grow: 1;
-    width: 100%;
-}
-
-.research-details-blog h3 {
-    font-size: 1.8rem;
-    color: #3f6ab0;
-    margin-bottom: 10px;
-}
-
-.research-details-blog p {
-    font-size: 1.1rem;
-    margin-bottom: 20px;
-    color: #666;
-    text-align: justify;
-}
-
-.research-details-blog p strong {
-    font-weight: bold;
-    color: #3f6ab0;
-}
-
-
 @media (max-width: 768px) {
     header {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 20px 5%; /* Slightly reduced padding for mobile */
-    }
-
-    .logo {
-        margin-right: 0;
-        margin-bottom: 15px;
-    }
-
-    nav {
-        flex-direction: column;
-        width: 100%;
-    }
-
-    nav a {
-        margin: 10px 0;
-        width: 100%;
-        padding: 10px 0;
-    }
-
-    nav a.download-cv-button {
-        width: auto; /* Override the full width for this button */
-        margin: 10px auto; /* Center the button */
-    }
-
-    header, .about-research-container {
-        padding-left: 5%;
-        padding-right: 5%;
-    }
-
-    .blog-post {
-        width: 95%; /* Almost full width on mobile */
-        padding: 20px 30px;
-    }
-
-    .blog-post h1 {
-        font-size: 2rem;
-    }
-
-    .blog-post p, .blog-post ul {
-        font-size: 1.1rem;
-    }
-}
-
-@media (max-width: 1200px) {
-    .blog-post {
-        width: 90%; /* Slightly wider on smaller screens */
-        padding: 30px 50px;
-    }
-}
-
-/* Responsive adjustments for both research-item and course */
-@media (max-width: 1200px) {
-    .research-item, .course {
-        width: 90%; /* Slightly wider on smaller screens */
-    }
-}
-
-@media (max-width: 768px) {
-    .research-item, .course {
-        width: 95%; /* Almost full width on mobile */
-    }
-}
-
-/* Ensure consistent padding with header */
-.research-item, .course {
-    padding-left: 5%;
-    padding-right: 5%;
-}
-
-@media (max-width: 768px) {
-    header, .research-item, .course {
         padding-left: 5%;
         padding-right: 5%;
     }
 }
-
